--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KatiUI">
-        <activity android:name=".MainActivity">
+        <activity android:name=".katiDomain.main.SignOutActivity"></activity>
+        <activity
+            android:name=".katiDomain.main.PasswordEditActivity"
+            android:label="@string/title_activity_password_edit"
+            android:theme="@style/Theme.KatiUI.NoActionBar" />
+        <activity
+            android:name=".katiDomain.main.SignUpActivity"
+            android:label="@string/title_activity_sign_up"
+            android:theme="@style/Theme.KatiUI.NoActionBar" />
+        <activity android:name=".katiDomain.main.view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
