--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ android {
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
+    // heart button
+        compile 'com.github.varunest:sparkbutton:1.0.6'
+        // https://github.com/varunest/SparkButton
+
     // Navigation
         def nav_version = "2.3.3"
         // Java language implementation
