--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KatiUI">
-        <activity android:name=".kati.setRestoreEmail.SetRestoreEmailActivity"></activity>
+        <activity android:name=".kati.review.ReviewActivity"></activity>
+        <activity android:name=".kati.setRestoreEmail.SetRestoreEmailActivity" />
         <activity android:name=".kati.findId.FindIdActivity" />
         <activity android:name=".kati.editName.EditNameActivity" />
         <activity android:name=".kati.findPassword.FindPasswordActivity" />
